[project]
name = "comfyui-adaptive-guidance"
description = "An implementation of adaptive guidance for ComfyUI\nSee https://bcv-uniandes.github.io/adaptiveguidance-wp/"
version = "0.2.1"
license = { text = "GNU General Public License v3.0" }

[project.urls]
Repository = "https://github.com/asagi4/ComfyUI-Adaptive-Guidance"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "asagi4"
DisplayName = "ComfyUI Adaptive Guidance"
Icon = ""
